изменения стилей на странице рекомендации

--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
 
 <body>
     <header class="main__header" style="background-image: url('./img/4.jpg');">
-        <div class="fixed-menu">
-            <a href="#" data-target="slide-out" class="sidenav-trigger">
-                <i class="material-icons">menu</i>
-            </a>
-        </div>
+        
         <ul id="slide-out" class="sidenav toolbar">
             <div class="toolbar__tel">
                 <a class="waves-effect waves-light" href="index.html">
@@ -155,7 +151,7 @@
                 <div class="col s12 m6 l4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/sample-1.jpg">
+                            <img src="img/432031507_w640_h640_privyazka_003___5_jjjjjjjj.jpg">
                             <span class="card-title">Card Title</span>
                             <a href="tel:89282808892"
                                 class="btn-floating btn-large halfway-fab waves-effect waves-light red"><i
@@ -169,7 +165,7 @@
                 <div class="col s12 m6 l4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/sample-1.jpg">
+                            <img src="img/432032498_w640_h640_privyazka_003___5_jjjjjjjj.jpg">
                             <span class="card-title">Card Title</span>
                             <a href="tel:89282808892"
                                 class="btn-floating btn-large halfway-fab waves-effect waves-light red"><i
@@ -183,7 +179,7 @@
                 <div class="col s12 m6 l4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/sample-1.jpg">
+                            <img src="img/432033044_w640_h640_privyazka_003____jjjjjjjjj.jpg">
                             <span class="card-title">Card Title</span>
                             <a href="tel:89282808892"
                                 class="btn-floating btn-large halfway-fab waves-effect waves-light red"><i
