--- a/recomendatsii-po-primrneniu.html
+++ b/recomendatsii-po-primrneniu.html
@@ -72,24 +72,33 @@
     <main class='content'>
         <div class="container">
             <h2 class="content__h2">Рекомендации по применению для сельхозпроизводителей</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam et at eum officiis. Optio repellat
-                cumque voluptatibus, exercitationem inventore delectus adipisci, atque aspernatur possimus quod
-                architecto quae asperiores! Quas nihil vel et id maxime placeat repellat iusto voluptatum voluptates
-                cumque.</p>
-            <p>Dolorem placeat aperiam nisi, nesciunt architecto pariatur tempore eveniet fugiat, suscipit qui possimus
-                blanditiis eligendi delectus odio autem perferendis accusamus vel ut dolorum cumque doloremque, id quis
-                itaque deleniti! Odio dicta voluptas numquam non eveniet debitis, modi ullam quaerat dolor.</p>
-            <p>Fugiat aliquam delectus facere autem inventore voluptatibus dolorum assumenda aspernatur, perspiciatis
-                sunt dolore. Nostrum reprehenderit delectus impedit totam officiis? Cumque consectetur iste, tempora
-                repellat, doloremque neque natus distinctio, perspiciatis alias sed pariatur aliquid sapiente fuga non
-                iure est laboriosam numquam.</p>
-            <p>Magni voluptatibus quidem aut voluptatum. Laborum molestias amet placeat aliquid repellendus neque iste
-                voluptate iusto consequatur culpa fugit eveniet voluptatem id, modi incidunt quis et necessitatibus
-                nihil illum, atque, perferendis ad eius. Sapiente at ipsum, corrupti veniam tempore eveniet minima?</p>
-            <p>Quibusdam aspernatur in voluptate incidunt minima optio. Consectetur ab harum exercitationem perferendis
-                quibusdam sed voluptatem aspernatur veniam unde corrupti quaerat ipsum sit minima optio repellat
-                nostrum, officiis sequi magnam doloribus laudantium omnis dolorum tempora doloremque? Eum velit iste
-                ipsam molestias.</p>
+            <p>Органоминеральное удобрение " РОСОМУ" содержит в своём составе 80-80% свежего, не разложившегося
+                органического вещества, а также азот, фосфор, калий, магний и микроэлементы.
+                Удобрение "РОСОМУ" предназначено для полноценного питания полевых, огородных и декоративных культур, а
+                также для выращивания рассады. Применение удобрения обеспечивает высокий урожай отличными вкусовыми
+                качествами, отсутствие в плодах нитратного азота, морозоустойчивость и сопротивляемость растений
+                болезням, насыщение почвы углеродом органического вещества, буферность и водонепроницаемость почвы.
+            </p>
+            <p>Результаты многочисленных исследований установлено, то даже при большом обеспечении сельскохозяйственных
+                культур минеральным азотом не менее 50% от его содержание в урожае растения получают за счёт разложение
+                органического вещества в процессе жизнедеятельности микроорганизмов и биологической азотфиксации. </p>
+            <p>Применение органических удобрений в сочетании с минеральным благодаря активизации деятельности почвенных
+                микроорганизмов усиливает процессы иммобилизация азота и минерализации органического почве, что
+                обеспечивает лучшие использовать растениями не только азота почвы, включая микробную биомассу, но и
+                минеральных удобрений. </p>
+            <p>Переработка свежий органики обеспечивается введением в технологии операций, позволяющих получить на
+                выходе гранулы, состоящие из безвредных для почвы соединений исходных компонентов. Переработка свежей
+                органики позволяет законсервировать в получаемых органо-минеральных удобрениях органические соединения и
+                перевести их минерализацию в непосредственно в почву. Этим обеспечивается по сравнению с другими
+                технологиями наиболее полное снабжение почвы энергетическим материалом и пищей для микроорганизмов.
+                Образование в получаемом удобрение сложных, медленно растворимых и комплексных соединений позволяет
+                закреплять азот и калий в обменной форме и уменьшать их подвижность, а фосфор переводя форму легко
+                усвояемую растениями. За счёт этого коэффициент использования питательных элементов из ОМУ достигает
+                90-95%, и как следствие, снижаются дозы внесения по сравнению с минеральными удобрениями. </p>
+            <p>Результаты любительских и профессиональных опытов показали, что возвращённое в почву органическое
+                вещество навоза, переработанное в свежем виде, позволяет оптимизировать работу почвы на урожай, а
+                следовательно, и сельскохозяйственное производство через гармоничное использование биохимических законов
+                круговорота органического вещества. </p>
             <p>Рекомендации по применению:</p>
             <table class="striped centered">
                 <thead>
@@ -180,7 +189,7 @@
                         <td>5-10% на м3 грунта</td>
                         <td>Внесение при подготовке почвы</td>
                     </tr>
-                     <tr>
+                    <tr>
                         <td></td>
                         <td>Цветочно-декоративные культуры</td>
                         <td>100-300кг/га</td>
@@ -188,10 +197,13 @@
                     </tr>
 
 
-                   
+
                 </tbody>
             </table>
-            <img src="./img/unnamed.jpg" alt="Рекомендации по применению органоминерального удобрения «УНИВЕРСАЛЬНОЕ» ">
+            <h2 class="content__h2">Рекомендации по применению органоминерального удобрения «УНИВЕРСАЛЬНОЕ»</h2>
+            <div class="block__img">
+                <img src="./img/432033044_w640_h640_privyazka_003____jjjjjjjjj.jpg" alt="Рекомендации по применению органоминерального удобрения «УНИВЕРСАЛЬНОЕ» ">
+            </div>
             <table class="striped centered">
                 <thead>
                     <tr>
@@ -316,13 +328,13 @@
                                     href="contact.html">Контакты</a></li>
                         </ul>
                         <ul class="footer__ul">
-                            <li class="footer__social waves-effect waves-light"><a href="#!"><i
-                                        class="fab fa-vk"></i></a></li>
+                            <li class="footer__social waves-effect waves-light"><a target="blank"
+                                    href="http://vk.com"><i class="fab fa-vk"></i></a></li>
 
-                            <li class="footer__social waves-effect waves-light"><a href="#!"><i
-                                        class="fab fa-facebook-f"></i></a></li>
-                            <li class="footer__social waves-effect waves-light"><a href="#!"><i
-                                        class="fab fa-instagram"></i></a></li>
+                            <li class="footer__social waves-effect waves-light"><a target="blank"
+                                    href="http://facebook.com"><i class="fab fa-facebook-f"></i></a></li>
+                            <li class="footer__social waves-effect waves-light"><a target="blank"
+                                    href="http://instagram.com/organika77/"><i class="fab fa-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
