--- a/contact.html
+++ b/contact.html
@@ -139,12 +139,12 @@
                                     href="contact.html">Контакты</a></li>
                         </ul>
                         <ul class="footer__ul">
-                            <li class="footer__social waves-effect waves-light"><a href="#!"><i
+                            <li class="footer__social waves-effect waves-light"><a target="blank" href="http://vk.com"><i
                                         class="fab fa-vk"></i></a></li>
 
-                            <li class="footer__social waves-effect waves-light"><a href="#!"><i
+                            <li class="footer__social waves-effect waves-light"><a target="blank" href="http://facebook.com"><i
                                         class="fab fa-facebook-f"></i></a></li>
-                            <li class="footer__social waves-effect waves-light"><a href="#!"><i
+                            <li class="footer__social waves-effect waves-light"><a target="blank" href="http://instagram.com/organika77/"><i
                                         class="fab fa-instagram"></i></a></li>
                         </ul>
                     </div>
