добовления в файл Азотные минеральные удобрения

--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
             </a>
         </div>
         <ul id="slide-out" class="sidenav toolbar">
+            <i class="material-icons close">close</i>
             <div class="toolbar__tel">
                 <a class="waves-effect waves-light" href="index.html">
                     <img src="./img/Логотип_мельница.png" alt="Логотип">
@@ -101,7 +102,7 @@
                 <div class="col s12 m6">
                     <h2 class="content__h2">Склад</h2>
                     <div class="content__contact-info">
-
+                        <h3>В разработке</h3>
                     </div>
                 </div>
             </div>
