--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
 
 <body>
     <header class="main__header" style="background-image: url('./img/4.jpg');">
-        
+        <div class="fixed-menu">
+            <a href="#" data-target="slide-out" class="sidenav-trigger">
+                <i class="material-icons">menu</i>
+            </a>
+        </div>
         <ul id="slide-out" class="sidenav toolbar">
+            <i class="material-icons close">close</i>
             <div class="toolbar__tel">
                 <a class="waves-effect waves-light" href="index.html">
                     <img src="./img/Логотип_мельница.png" alt="Логотип">
@@ -68,9 +73,9 @@
     </header>
     <main class='container'>
         <div class="content">
-            <h2 class="content__h2">Lorem.</h2>
-            <p class="content__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur officiis doloribus,
-                debitis voluptatum repellat omnis mollitia corrupti accusamus sit deleniti!</p>
+            <h2 class="content__h2">Высокий урожай</h2>
+            <p class="content__p">Применение минеральных удобрений — один из основных приемов интенсивного земледелия.
+                С помощью удобрений можно повысить урожаи.</p>
             <div class="content__row row">
                 <div class="content__item col s12 m6 l3">
                     <div class="card">
@@ -285,11 +290,24 @@
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">Footer Content</h5>
-                    <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Laborum quis adipisci fugiat laboriosam, sapiente debitis doloremque hic maiores explicabo sit
-                        odio fuga doloribus in ad aliquid, voluptates vel perferendis ipsam dignissimos quod dolorum.
-                        Aut temporibus aliquid earum magnam rerum vel.</p>
+                    <h5 class="white-text">Уникальная гранула</h5>
+                    <p class="grey-text text-lighten-4">Органоминеральное удобрение — гранулированное комплексное
+                        удобрение пролонгированного действия на основе навоза крупного рогатого скота. Представляет
+                        собой гранулы темно-коричневого цвета, диаметром - 6 мм. Специально разработанная гранула
+                        содержит в своем составе до 85% органических веществ, а также азот, фосфор, калий, магний и все
+                        необходимые микроэлементы.</p>
+                    <p class="grey-text text-lighten-4">Попадая на поверхность почвы, гранула постепенно и равномерно
+                        растворяется, высвобождая при этом
+                        питательные элементы для ризосферных бактерий, которые фиксируют атмосферный азот и переводят
+                        его в усвояемую форму для жизнедеятельности полезной микрофлоры почвы, которая синтезирует
+                        вещества, блокирующие развитие фитопатогенных микроорганизмов, и в конце концов для самого
+                        растения, обеспечивая его пищей в осенне-зимний период.</p>
+                    <p class="grey-text text-lighten-4">В почве в течение двух трех дней, <b>гранула увеличится в размерах в несколько раз, и в связи с
+                        активной жизнедеятельностью биоты (бактерии и микроорганизмы) почвы органоминеральный субстрат
+                        распределяется по всей площади внесения.</b> Минеральные элементы, находящиеся в доступной форме,
+                        сразу проникают в почвенный раствор в зону развития корневой системы, а питательные вещества из
+                        органической части удобрения постепенно питают растение на протяжении последующих 2-3 месяцев.
+                    </p>
                 </div>
                 <div class="col l5 offset-l1 s12">
                     <h5 class="white-text">Навигация по сайту</h5>
