--- a/mineral'nyye_udobreniya.html
+++ b/mineral'nyye_udobreniya.html
@@ -22,6 +22,7 @@
             </a>
         </div>
         <ul id="slide-out" class="sidenav toolbar">
+            <i class="material-icons close">close</i>
             <div class="toolbar__tel">
                 <a class="waves-effect waves-light" href="index.html">
                     <img src="./img/Логотип_мельница.png" alt="Логотип">
@@ -72,6 +73,79 @@
     <main class='content'>
         <div class="container">
             <h2 class="content__h2">Азотные минеральные удобрения.</h2>
+            <div class="content__ol">
+                <ol>
+                    <li>
+                        <h4 class="title__li">Аммиачная селитра</h4>
+                        <p>Удобрение - универсальное высоконцентрированное азотное, с содержанием аммонийной и нитратной
+                            форм азота в равных количествах для обеспечения питания растений в течение всего
+                            вегетационного периода. Применяется на всех почвах для всех культур. Максимально эффективен
+                            при весенней и летней подкормке сельскохозяйственных культур. Подходит и для прямого
+                            внесения и для приготовления тукосмесей. А так же обладает физико-химическими
+                            характеристиками, что дает облегчение в хранении и внесении. Водорастворимо 100%.
+                            Произведено из чистого синтетического сырья. </p>
+                        <h6 class="subtitle">транспортировка</h6>
+                        <p>Насыпью. В МКР по 1000кг и в мешках по 50 кг. Транспортировка осуществляется в ж/д вагонах
+                            или автотранспортом. Хранить в сухом изолированном помещении.</p>
+                        <ul>
+                            <h6>Внешний вид:</h6>
+                            <li>Гранулы белого цвета или слегка окрашенные без механических примесей</li>
+                            <h6>Массовая доля общего азота, не менее:</h6>
+                            <li>34,4%</li>
+                            <h6>Массовая доля воды, не более:</h6>
+                            <li>Гигроскопической: 0,3%</li>
+                            <li>Общей: 0,6%</li>
+                            <h6>Гранулометрический состав</h6>
+                            <p>Массовая доля гранул размером:</p>
+                            <li>Менее 1мм, не более: 3%</li>
+                            <li>От 1-4мм, не менее: 95%</li>
+                            <li>Менее 6мм: 100%</li>
+                            <h6>Статическая прочность гранул, не менее:</h6>
+                            <li>8 Н/гранулу</li>
+                            <h6>Рассыпчатость, не менее:</h6>
+                            <li>100%</li>
+
+
+                        </ul>
+                        <p>Примечание:</p>
+                        <p>Аммиачная селитра по желанию может быть обработана антислеживателем (не для применения в
+                            защищенном грунте)</p>
+                    </li>
+                    <li>
+                        <h4 class="title__li">Карбамид (мочевина)</h4>
+                        <p>Удобрение – наиболее концентрированное азотное минеральное. В течение длительного времени
+                            обеспечивает растение азотом. Водорастворимо 100%. Подходит для ирригационных систем.
+                            Максимально эффективен при выращивании риса и бахчевых. Произведено из чистого
+                            синтетического сырья.</p>
+                        <h6 class="subtitle">транспортировка</h6>
+                        <p>Насыпью. В МКР по 625 кг и мешках по 50 кг. Транспортировка осуществляется в ж/д вагонах или автотранспортом. Хранить в сухом изолированном помещении.</p>
+                        <ul>
+                            <h6>Внешний вид:</h6>
+                            <li>Белые гранулы</li>
+                            <h6>Массовая доля биурета, не более:</h6>
+                            <li>1,4%</li>
+                            <h6>Массовая доля общего азота, не менее:</h6>
+                            <li>46,2%</li>
+                            <h6>Массовая доля воды, не более:</h6>
+                            <li>Гигроскопической: 0,3%</li>
+                            <li>Общей: 0,6%</li>
+                            <h6>Гранулометрический состав</h6>
+                            <p>Массовая доля гранул размером:</p>
+                            <li>Менее 1мм, не более: 5%</li>
+                            <li>От 1-4мм, не менее: 94%</li>
+                            <li>Менее 6мм: 100%</li>
+                            <h6>Статическая прочность гранул, не менее:</h6>
+                            <li>0,7кгс/гранулу</li>
+                            <h6>Рассыпчатость, не менее:</h6>
+                            <li>100%</li>
+
+
+                        </ul>
+                        <p>Примечание:</p>
+                        <p>Карбамид по желанию может быть обработан антислеживателем.</p>
+                    </li>
+                </ol>
+            </div>
         </div>
     </main>
     <footer class=" page-footer footer">
@@ -99,18 +173,19 @@
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
                                     href="сertifications.html">Сертификаты</a>
                             </li>
-                            <li class="footer__nav"> <a class="grey-text text-lighten-3 waves-effect waves-light" href="reviews.html">Отзывы</a></li>
+                            <li class="footer__nav"> <a class="grey-text text-lighten-3 waves-effect waves-light"
+                                    href="reviews.html">Отзывы</a></li>
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
                                     href="contact.html">Контакты</a></li>
                         </ul>
                         <ul class="footer__ul">
-                            <li class="footer__social waves-effect waves-light"><a target="blank" href="http://vk.com"><i
-                                        class="fab fa-vk"></i></a></li>
+                            <li class="footer__social waves-effect waves-light"><a target="blank"
+                                    href="http://vk.com"><i class="fab fa-vk"></i></a></li>
 
-                            <li class="footer__social waves-effect waves-light"><a target="blank" href="http://facebook.com"><i
-                                        class="fab fa-facebook-f"></i></a></li>
-                            <li class="footer__social waves-effect waves-light"><a target="blank" href="http://instagram.com/organika77/"><i
-                                        class="fab fa-instagram"></i></a></li>
+                            <li class="footer__social waves-effect waves-light"><a target="blank"
+                                    href="http://facebook.com"><i class="fab fa-facebook-f"></i></a></li>
+                            <li class="footer__social waves-effect waves-light"><a target="blank"
+                                    href="http://instagram.com/organika77/"><i class="fab fa-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
