--- a/services.html
+++ b/services.html
@@ -22,12 +22,12 @@
             </a>
         </div>
         <ul id="slide-out" class="sidenav toolbar">
+            <i class="material-icons close">close</i>
             <div class="toolbar__tel">
                 <a class="waves-effect waves-light" href="index.html">
                     <img src="./img/Логотип_мельница.png" alt="Логотип">
                     <div class="toolbar__logo">Органика</div>
                 </a>
-
             </div>
 
             <nav class="navbar">
@@ -79,8 +79,7 @@
             <h2 class="content__h2">Органо-минеральные удобрения</h2>
             <ol>
                 <li>
-                    <div>Комплекс – «Органика + АЗОТ» (эффективнее и безопаснее Аммиачной селитры) + восстановление
-                        плодородия!</div>
+                    <div>Комплект — «Органика +Азот» + восстановление плодородия, эффективнее и безопаснее (аналогичен по действию аммиачной селитре) Фасовка 1000 кг.</div>
 
                     <ul>
                         <li style="list-style-type: disc; text-indent: 30px;">Использование восстанавливает почвенное
@@ -144,8 +143,7 @@
 
                 </li>
                 <li>
-                    <div>Комплексное удобрение (ОМУ) (аналогичен по действию АЗОФОСКА 16*16*16) + восстановление
-                        плодородия!</div>
+                    <div>Комплексное удобрение (ОМУ) 12*12*12 + восстановление плодородия (аналогичен по действию АЗОФОСКА 16*16*16) Фасовка 1000 кг.</div>
                     <ul>
                         <li style="list-style-type: disc; text-indent: 30px; ">Использование восстанавливает почвенное
                             плодородие(круговорот органического вещества в агроценозе)!!!</li>
@@ -209,8 +207,7 @@
                     </table>
                 </li>
                 <li>
-                    <p>Комплексное удобрение (РосОМУ) с (NPK 7*18*18) (аналогичен по действию ДИАММОФОСКА 10*26*26) +
-                        восстановление плодородия:</p>
+                    <p>Комплексное удобрение (ОМУ) с (NPk 7*18*18) + восстановление плодородия (аналогичен по действию ДИАММОФОСКА с NPk 10*26*26) Фасовка 1000 кг.</p>
                     <ul>
                         <li style="list-style-type: disc; text-indent: 30px;">Производится по собственной
                             запатентованной технологии;</li>
@@ -318,8 +315,7 @@
                     </table>
                 </li>
                 <li>
-                    <div>Комплексное удобрение (РосОМУ) с (NPK 12*32) (аналогичен по действию АММОФОС 12*52) +
-                        восстановление плодородия:</div>
+                    <div>Комплексное удобрение (ОМУ) с (NPk 12*32) + восстановление плодородия (аналогичен по действию АММОФОС 12*52) Фасовка 1000 кг.</div>
                     <ul>
 
 
