--- a/recomendatsii-po-primrneniu.html
+++ b/recomendatsii-po-primrneniu.html
@@ -22,6 +22,7 @@
             </a>
         </div>
         <ul id="slide-out" class="sidenav toolbar">
+            <i class="material-icons close">close</i>
             <div class="toolbar__tel">
                 <a class="waves-effect waves-light" href="index.html">
                     <img src="./img/Логотип_мельница.png" alt="Логотип">
@@ -72,7 +73,7 @@
     <main class='content'>
         <div class="container">
             <h2 class="content__h2">Рекомендации по применению для сельхозпроизводителей</h2>
-            <p>Органоминеральное удобрение " РОСОМУ" содержит в своём составе 80-80% свежего, не разложившегося
+            <p>Органоминеральное удобрение " РОСОМУ" содержит в своём составе 80-85% свежего, не разложившегося
                 органического вещества, а также азот, фосфор, калий, магний и микроэлементы.
                 Удобрение "РОСОМУ" предназначено для полноценного питания полевых, огородных и декоративных культур, а
                 также для выращивания рассады. Применение удобрения обеспечивает высокий урожай отличными вкусовыми
@@ -202,7 +203,7 @@
             </table>
             <h2 class="content__h2">Рекомендации по применению органоминерального удобрения «УНИВЕРСАЛЬНОЕ»</h2>
             <div class="block__img">
-                <img src="./img/432033044_w640_h640_privyazka_003____jjjjjjjjj.jpg" alt="Рекомендации по применению органоминерального удобрения «УНИВЕРСАЛЬНОЕ» ">
+                <img src="./img/432031507_w640_h640_privyazka_003___5_jjjjjjjj.jpg" alt="Рекомендации по применению органоминерального удобрения «УНИВЕРСАЛЬНОЕ» ">
             </div>
             <table class="striped centered">
                 <thead>
