--- a/reviews.html
+++ b/reviews.html
@@ -22,6 +22,7 @@
             </a>
         </div>
         <ul id="slide-out" class="sidenav toolbar">
+            <i class="material-icons close">close</i>
             <div class="toolbar__tel">
                 <a class="waves-effect waves-light" href="index.html">
                     <img src="./img/Логотип_мельница.png" alt="Логотип">
