--- a/recomendatsii-po-primrneniu.html
+++ b/recomendatsii-po-primrneniu.html
@@ -101,7 +101,7 @@
                 следовательно, и сельскохозяйственное производство через гармоничное использование биохимических законов
                 круговорота органического вещества. </p>
             <p>Рекомендации по применению:</p>
-            <table class="striped centered">
+            <table class=" centered highlight">
                 <thead>
                     <tr>
                         <th>Вид</th>
@@ -205,7 +205,7 @@
             <div class="block__img">
                 <img src="./img/432031507_w640_h640_privyazka_003___5_jjjjjjjj.jpg" alt="Рекомендации по применению органоминерального удобрения «УНИВЕРСАЛЬНОЕ» ">
             </div>
-            <table class="striped centered">
+            <table class="centered highlight">
                 <thead>
                     <tr>
                     <tr>
