--- a/services.html
+++ b/services.html
@@ -76,7 +76,7 @@
                 <div class="content__img"> <img src="img/service_img_2.jpg" alt="услуги 2"> </div>
                 <div class="content__img"> <img src="img/service_img_3.jpg" alt="услуги 3"> </div>
             </div>
-            <h2 class="content__h2">Органо-минеральные удобрения</h2>
+            <h2 class="content__h2">ОМУ (Органоминеральные удобрения)</h2>
             <ol>
                 <li>
                     <div>Комплект — «Органика +Азот» + восстановление плодородия, эффективнее и безопаснее (аналогичен по действию аммиачной селитре) Фасовка 1000 кг.</div>
