--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                         собой гранулы темно-коричневого цвета, диаметром - 6 мм. Специально разработанная гранула
                         содержит в своем составе до 85% органических веществ, а также азот, фосфор, калий, магний и все
                         необходимые микроэлементы.</p>
-                        <a class="waves-effect waves-light btn-small readmore_start">Развернуть</a>
+                        <a class="waves-effect waves-light btn-small readmore_start">Читать полностью</a>
                     <div class="readmore">
                         <p class="grey-text text-lighten-4">Попадая на поверхность почвы, гранула постепенно и
                             равномерно
