--- a/mineral'nyye_udobreniya.html
+++ b/mineral'nyye_udobreniya.html
@@ -34,7 +34,7 @@
             <nav class="navbar">
                 <ul>
                     <li> <a class="waves-effect waves-light" href="index.html">Главная</a></li>
-                    <li> <a class="waves-effect waves-light" href="services.html">Товары и услуги</a></li>
+                    <li> <a class="waves-effect waves-light" href="services.html">ОМУ (Органоминеральные удобрения)</a></li>
                     <li> <a class="waves-effect waves-light" href="recomendatsii-po-primrneniu.html">Рекомендации по
                             применению</a></li>
                     <li> <a class="waves-effect waves-light" href="mineral'nyye_udobreniya.html">Азотные минеральные
@@ -165,7 +165,7 @@
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
                                     href="index.html">Главная</a></li>
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
-                                    href="services.html">Товары и услуги</a></li>
+                                    href="services.html">ОМУ (Органоминеральные удобрения)</a></li>
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
                                     href="recomendatsii-po-primrneniu.html">Рекомендации по применению</a></li>
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
