--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
             <nav class="navbar">
                 <ul>
                     <li> <a class="waves-effect waves-light" href="index.html">Главная</a></li>
-                    <li> <a class="waves-effect waves-light" href="services.html">Товары и услуги</a></li>
+                    <li> <a class="waves-effect waves-light" href="services.html">ОМУ (Органоминеральные удобрения)</a></li>
                     <li> <a class="waves-effect waves-light" href="recomendatsii-po-primrneniu.html">Рекомендации по
                             применению</a></li>
                     <li> <a class="waves-effect waves-light" href="mineral'nyye_udobreniya.html">Азотные минеральные
@@ -98,7 +98,7 @@
                         <li style="list-style-type: disc; text-indent: 30px;">Гранулы 2-4 мм вносятся всеми типами
                             разбрасывателей минеральных удобрений;</li>
                     </ul>
-                    <table class="striped centered">
+                    <table class="striped centered responsive-table">
                         <thead>
                             <tr>
                                 <th>Основные</th>
@@ -125,7 +125,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <table class="striped centered">
+                    <table class="striped centered responsive-table">
                         <thead>
                             <tr>
                                 <th>Действующие вещества</th>
@@ -163,7 +163,7 @@
                             разбрасывателей минеральных удобрений.</li>
 
                     </ul>
-                    <table class="striped centered">
+                    <table class="striped centered responsive-table">
                         <thead>
                             <tr>
                                 <th>Основные</th>
@@ -190,7 +190,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <table class="striped centered">
+                    <table class="striped centered responsive-table">
                         <thead>
                             <tr>
                                 <th>Действующие вещества</th>
@@ -458,7 +458,7 @@
                         </li>
 
                     </ul>
-                    <table class="striped centered">
+                    <table class="striped centered responsive-table">
                         <thead>
                             <tr>
                                 <th>Основные</th>
@@ -485,7 +485,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <table class="striped centered">
+                    <table class="striped centered responsive-table">
                         <thead>
                             <tr>
                                 <th>Действующие вещества</th>
@@ -526,7 +526,7 @@
                         <li style="list-style-type: disc; text-indent: 30px;">Не опасно в отличие от куриного помета.
                         </li>
                     </ul>
-                    <table class="striped centered">
+                    <table class="striped centered responsive-table" >
                         <thead>
                             <tr>
                                 <th>Основные</th>
@@ -553,7 +553,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <table class="striped centered">
+                    <table class="striped centered responsive-table">
                         <thead>
                             <tr>
                                 <th>Действующие вещества</th>
@@ -579,7 +579,7 @@
                         <li style="list-style-type: disc; text-indent: 30px;">Применяется  при органическом земледелии;</li>
                         <li style="list-style-type: disc; text-indent: 30px;">Не вымывается водой, улучшает водный и воздушный режим почв;</li>
                     </ul>
-                    <table class="striped centered">
+                    <table class="striped centered responsive-table">
                         <thead>
                             <tr>
                                 <th>Основные</th>
@@ -606,7 +606,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <table class="striped centered">
+                    <table class="striped centered responsive-table">
                         <thead>
                             <tr>
                                 <th>Действующие вещества</th>
@@ -643,7 +643,7 @@
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
                                     href="index.html">Главная</a></li>
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
-                                    href="services.html">Товары и услуги</a></li>
+                                    href="services.html">ОМУ (Органоминеральные удобрения)</a></li>
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
                                     href="recomendatsii-po-primrneniu.html">Рекомендации по применению</a></li>
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
