--- a/recomendatsii-po-primrneniu.html
+++ b/recomendatsii-po-primrneniu.html
@@ -34,7 +34,7 @@
             <nav class="navbar">
                 <ul>
                     <li> <a class="waves-effect waves-light" href="index.html">Главная</a></li>
-                    <li> <a class="waves-effect waves-light" href="services.html">Товары и услуги</a></li>
+                    <li> <a class="waves-effect waves-light" href="services.html">ОМУ (Органоминеральные удобрения)</a></li>
                     <li> <a class="waves-effect waves-light" href="recomendatsii-po-primrneniu.html">Рекомендации по
                             применению</a></li>
                     <li> <a class="waves-effect waves-light" href="mineral'nyye_udobreniya.html">Азотные минеральные
@@ -101,7 +101,7 @@
                 следовательно, и сельскохозяйственное производство через гармоничное использование биохимических законов
                 круговорота органического вещества. </p>
             <p>Рекомендации по применению:</p>
-            <table class=" centered highlight">
+            <table class=" centered highlight responsive-table">
                 <thead>
                     <tr>
                         <th>Вид</th>
@@ -205,7 +205,7 @@
             <div class="block__img">
                 <img src="./img/432031507_w640_h640_privyazka_003___5_jjjjjjjj.jpg" alt="Рекомендации по применению органоминерального удобрения «УНИВЕРСАЛЬНОЕ» ">
             </div>
-            <table class="centered highlight">
+            <table class="centered highlight responsive-table">
                 <thead>
                     <tr>
                     <tr>
@@ -315,7 +315,7 @@
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
                                     href="index.html">Главная</a></li>
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
-                                    href="services.html">Товары и услуги</a></li>
+                                    href="services.html">ОМУ (Органоминеральные удобрения)</a></li>
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
                                     href="recomendatsii-po-primrneniu.html">Рекомендации по применению</a></li>
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
